The only elements using floats are dt.It-tag, so the only elements allowed to the right of them are dd.It-tag. Fixes overlapping rendering after long tag lists without bodies, for example in the Xenocara apm(4) manual.  Issue reported by tj@.

--- a/usr.bin/mandoc/mandoc.css
+++ b/usr.bin/mandoc/mandoc.css
@@ -1,4 +1,4 @@
-/* $OpenBSD: mandoc.css,v 1.8 2017/07/15 17:29:26 schwarze Exp $ */
+/* $OpenBSD: mandoc.css,v 1.9 2017/07/16 18:44:15 schwarze Exp $ */
 /*
  * Standard style sheet for mandoc(1) -Thtml and man.cgi(8).
  */
@@ -18,6 +18,7 @@ a.selflink {	border-bottom: thin dotted;
 		color: inherit;
 		font: inherit;
 		text-decoration: inherit; }
+* {		clear: both }
 
 /* Search form and search results. */
 
@@ -102,12 +103,12 @@ dt.It-ohang { }
 dd.It-ohang {	margin-left: 0ex; }
 dl.Bl-tag {	margin-left: 10.2ex; }
 dt.It-tag {	float: left;
-		clear: both;
 		margin-top: 0ex;
 		margin-left: -10.2ex;
 		padding-right: 2ex;
 		vertical-align: top; }
-dd.It-tag {	width: 100%;
+dd.It-tag {	clear: right;
+		width: 100%;
 		margin-top: 0ex;
 		margin-left: 0ex;
 		vertical-align: top;
